force-app/main/default/objects/Enrichment_Candidate__c/Enrichment_Candidate__c.object-meta.xml
<CustomObject>
    <description>AI-rewritten draft candidate from the AI Fix flow, awaiting Knowledge Manager review.</description>
    <label>Enrichment Candidate</label>
    <nameField>
        <displayFormat>EC-{0000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrichment Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>