force-app/main/default/objects/Enrichment_Candidate__c/fields/Draft_Article_Title__c.field-meta.xml
<CustomField>
    <fullName>Draft_Article_Title__c</fullName>
    <label>Draft Article Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>