force-app/main/default/objects/Enrichment_Candidate__c/fields/Draft_Article_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Draft_Article_Version_Id__c</fullName>
    <label>Draft Article Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>