force-app/main/default/objects/Enrichment_Candidate__c/fields/Knowledge_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Id__c</fullName>
    <description>Article-level (KnowledgeArticleId) of the source article. Used by KBEnrichmentReconciler to detect when a different version of the same article is published manually, so the candidate can be auto-closed.</description>
    <externalId>true</externalId>
    <label>Knowledge Article Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>