force-app/main/default/objects/Enrichment_Candidate__c/fields/Pipeline_Run__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Run__c</fullName>
    <label>Pipeline Run</label>
    <referenceTo>KB_Pipeline_Run__c</referenceTo>
    <relationshipLabel>Enrichment Candidates</relationshipLabel>
    <relationshipName>Pipeline_Enrichment_Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>