force-app/main/default/objects/Enrichment_Candidate__c/fields/Rewritten_Body__c.field-meta.xml
<CustomField>
    <fullName>Rewritten_Body__c</fullName>
    <label>Rewritten Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>