force-app/main/default/objects/Enrichment_Candidate__c/fields/Source_Article_Title__c.field-meta.xml
<CustomField>
    <fullName>Source_Article_Title__c</fullName>
    <label>Source Article Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>