force-app/main/default/objects/Enrichment_Candidate__c/fields/Source_Article_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Article_Version_Id__c</fullName>
    <label>Source Article Version Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>